PUBMAN-2168 [Tooltip for Workspace Link is missing] Resolved
Former-commit-id: 7cab232be3ae5002922ffa74f6a325649530150f

--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -752,7 +752,7 @@ Login_login_logout = Login/Logout
 
 MainMenu_ImportWorkspacesPage = Gehe zu Import Seite.
 
-MainMenu_WorkspacesPage = Gehe zu Arbeitsplatz Seite.
+MainMenu_WorkspacesPage = Gehe zur \u00DCbersicht der Arbeitsbereiche
 
 MainMenu_cartItemsPage = Gehe zur Ablage.
 
