--- a/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
@@ -752,6 +752,8 @@ Login_changeLanguage = Change Language
 # Login
 Login_login_logout = Login/Logout
 
+MainMenu_WorkspacesPage = Go to Workspaces Overview
+
 MainMenu_cartItemsPage = Go to Basket page.
 
 MainMenu_depWorkspace = Go to Depositor Workspace.
