Resolved PUBMAN-2167 [QA Workspace: Filter option label 'Organizational Unit' is cut]
Former-commit-id: dadd67c06260a6b5e655a3e683c79c007f86e3a2

--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -2518,7 +2518,7 @@ qaws_lblLoading = loading
 
 qaws_lblMultipleImportTags = Import Name
 
-qaws_lblOrgUnitSelection = Organizational Unit
+qaws_lblOrgUnitSelection = Org. Unit
 
 quick_search_btnStart = Go
 
