Resolved: [PUBMAN-2249] Limit OU search to the publication (exclusion of the source) Resolved: [PUBMAN-2246] Advanced Search: Move "PhD Thesis" to the top of the degree type drop down list Resolved: [PUBMAN-2244] Limit OU list in the filter of the QA Workspace to "own" OUs Resolved: [PUBMAN-2022] Remove from basket: confusing message when no item is selected
Former-commit-id: 7f625ed4c00ae1cde2232e7023d5456c05431cb3

--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -321,7 +321,7 @@ copyright = \u00A9 2007 Max Planck Society
 #
 create_Item_Select_Collection = Please choose a collection for your item.
 
-deleteItemsFromBasket_NoItemSelected = Please select at least one Item to delete.
+deleteItemsFromBasket_NoItemSelected = Please select at least one Item to remove.
 
 #
 # Delete Message
