--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -315,7 +315,7 @@ copyright = \u00A9 2007 Max Planck Gesellschaft
 #
 create_Item_Select_Collection = Bitte w\u00E4hlen Sie die Collection aus, in der Sie Ihren Datensatz erstellen m\u00F6chten.
 
-deleteItemsFromBasket_NoItemSelected = Bitte w\u00E4hlen Sie mindestens einen Datensatz zum L\u00F6schen aus.
+deleteItemsFromBasket_NoItemSelected = Bitte w\u00E4hlen Sie mindestens einen Datensatz zum entfernen aus.
 
 #
 # Delete Message
