Resolved [PUBMAN-2227] Offer CoNE and REST links (tools) for logged in users
Former-commit-id: bf69f9d51875e494da792e8a5f8b7c024b566fec

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1265,6 +1265,45 @@ ViewItemFull_lblSubHeaderEvent = Veranstaltung
 ViewItemFull_lblSubHeaderFile = Dateien
 
 #
+# Tools
+#
+ToolsPage = Tools
+
+Tools_lblTools = Tools
+
+Tools_lblCoNE = CoNE
+
+Tools_lblREST = REST
+
+Tools_lblUnAPI = unAPI
+
+Tools_lblValidationService = Validierungsservice
+
+Tools_lblSWORD = SWORD
+
+Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
+
+Tools_lblCoNEHead = Control of Named Entities (CoNE) 
+
+Tools_lblCoNEText = Durchsuchen und verwalten Sie kontrollierte Vokabulare f\u00FCr Personen, Zeitschriften, Klassifikationen oder Sprachen. 
+
+Tools_lblRESTHead = Suchen und Exportieren (REST-Schnittstelle)
+
+Tools_lblRESTText = M\u00F6chten Sie Ihre PubMan Daten in einem externen System integrieren? Die notwendigen Datenabfragen k\u00F6nnen Sie \u00FCber unsere REST-Schnittstelle vornehmen. 
+
+Tools_lblUnAPIHead = Service zur Daten\u00FCbernahme (unAPI-Schnittstelle)
+
+Tools_lblUnAPIText = M\u00F6chten Sie Publikationsdaten von externen Systemen wie arXiv, BioMed Central, PubMedCentral oder Spires importieren? Nutzen Sie dazu unsere unAPI-Schnittstelle!
+
+Tools_lblValidationServiceHead = Validierungsservice
+
+Tools_lblValidationServiceText = Pr\u00FCfen Sie Ihre XML-Daten auf formale Richtigkeit!  
+
+Tools_lblSWORDHead = SWORD\u002DSchnittstelle
+
+Tools_lblSWORDText = Nutzen Sie diesen Push\u002DDienst zum automatisierten Datenimport von externen Servern. 
+
+#
 # ViewItem Full
 #
 ViewItemFull_lblSubHeaderItem = Genre: 
@@ -2426,6 +2465,8 @@ login_btLogout = Ausloggen
 mainMenu_lblBrowse = Browse
 
 mainMenu_lblCart = ABLAGE
+
+mainMenu_lblTools = Tools
 
 mainMenu_lblMyWorkspace = Deposit
 
