--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1283,6 +1283,45 @@ ViewItemFull_lblnameOfCollection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u540D
 ViewItemFull_lblnameOfCreator = \u767B\u9332\u8005
 
 #
+# Tools
+#
+ToolsPage = Tools
+
+Tools_lblTools = Tools
+
+Tools_lblCoNE = CoNE
+
+Tools_lblREST = REST
+
+Tools_lblUnAPI = unAPI
+
+Tools_lblValidationService = Validation service
+
+Tools_lblSWORD = SWORD
+
+Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
+
+Tools_lblCoNEHead = Control of Named Entities (CoNE) 
+
+Tools_lblCoNEText = Search and administrate controlled vocabularies for persons, journals, classifications or languages. 
+
+Tools_lblRESTHead = Search and Export (REST-Interface)
+
+Tools_lblRESTText = Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via our REST-Interface! 
+
+Tools_lblUnAPIHead = Service for data transfer (unAPI-Interface)
+
+Tools_lblUnAPIText = Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface! 
+
+Tools_lblValidationServiceHead = Validation service
+
+Tools_lblValidationServiceText = Check your XML data for formal correctness with our validation service.
+
+Tools_lblSWORDHead = SWORD\u002DInterface
+
+Tools_lblSWORDText = Use this push service for automatic depositing from external servers. 
+
+#
 #ViewItemLog
 #
 ViewItemLogPage = \u5C65\u6B74\u60C5\u5831\u3092\u8868\u793A
@@ -2390,6 +2429,8 @@ login_btLogout = \u30ED\u30B0\u30A2\u30A6\u30C8
 mainMenu_lblBrowse = \u30D6\u30E9\u30A6\u30BA
 
 mainMenu_lblCart = \u4E00\u6642\u4FDD\u5B58
+
+mainMenu_lblTools = \u30C4\u30FC\u30EB
 
 mainMenu_lblMyWorkspace = \u767B\u9332\u8005\u7528
 
