--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -659,6 +659,13 @@ search_ParseError = Der Suchausdruck enth\u00E4lt unzul\u00E4ssige Zeichen z. B.
 search_TechnicalError = Technischer Fehler bei der Bearbeitung der Suche aufgetreten
 
 #
+# Tools
+#
+toolsOverview = Hier finden Sie eine \u00DCbersicht der zur Verf\u00FCgung stehenden Tools. 
+
+toolsMoreInformation = Weitere Informationen finden Sie unter:
+
+#
 # Common
 #
 welcome = Willkommen
