--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -668,6 +668,13 @@ search_ParseError = Search expression contains illegal characters e. g. ", * or 
 search_TechnicalError = Technical error while processing the search query
 
 #
+# Tools
+#
+toolsOverview = Here is an overview of available tools.
+
+toolsMoreInformation = Further information on the interfaces can be found under:
+
+#
 # Common
 #
 welcome = Welcome
