--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -620,6 +620,13 @@ search_ParseError = La expresi\u00F3n de b\u00FAsqueda contiene caracteres ilega
 search_TechnicalError = Se ha producido un error t\u00E9cnico mientras se procesaba la interrogaci\u00F3n de b\u00FAsqueda.
 
 #
+# Tools
+#
+toolsOverview = Here is an overview of available tools.
+
+toolsMoreInformation = Further information on the interfaces can be found under:
+
+#
 # Common
 #
 welcome = Bienvenido/a
