--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -765,6 +765,8 @@ NoSearchResultListPage = keine Suchergebnisse
 
 NoSearchResultsPage = Keine Treffer
 
+MainMenu_ToolsPage = Gehe zur Tools\u002D\u00DCbersicht
+
 #
 # Quality Assurance / Moderator Workspace
 #
