--- a/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
@@ -765,6 +765,8 @@ NoSearchResultListPage = No Search Results
 
 NoSearchResultsPage = No search results
 
+MainMenu_ToolsPage = Go to Tools-Overview
+
 #
 # Quality Assurance / Moderator Workspace
 #
