--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -1253,6 +1253,45 @@ ViewItemFull_lblSubHeaderEvent = Evento
 ViewItemFull_lblSubHeaderFile = Ficheros
 
 #
+# Tools
+#
+ToolsPage = Tools
+
+Tools_lblTools = Tools
+
+Tools_lblCoNE = CoNE
+
+Tools_lblREST = REST
+
+Tools_lblUnAPI = unAPI
+
+Tools_lblValidationService = Validation service
+
+Tools_lblSWORD = SWORD
+
+Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
+
+Tools_lblCoNEHead = Control of Named Entities (CoNE) 
+
+Tools_lblCoNEText = Search and administrate controlled vocabularies for persons, journals, classifications or languages. 
+
+Tools_lblRESTHead = Search and Export (REST-Interface)
+
+Tools_lblRESTText = Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via our REST-Interface! 
+
+Tools_lblUnAPIHead = Service for data transfer (unAPI-Interface)
+
+Tools_lblUnAPIText = Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface! 
+
+Tools_lblValidationServiceHead = Validation service
+
+Tools_lblValidationServiceText = Check your XML data for formal correctness with our validation service.
+
+Tools_lblSWORDHead = SWORD\u002DInterface
+
+Tools_lblSWORDText = Use this push service for automatic depositing from external servers. 
+
+#
 # ViewItem Full
 #
 ViewItemFull_lblSubHeaderItem = G\u00E9nero: 
@@ -2339,6 +2378,8 @@ login_btLogout = Logout
 mainMenu_lblBrowse = Hojear
 
 mainMenu_lblCart = CESTA
+
+mainMenu_lblTools = Instrumentos
 
 mainMenu_lblMyWorkspace = Depositar
 
