--- a/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
@@ -758,6 +758,8 @@ NoSearchResultListPage = Ning\uFFFDn resultado de b\uFFFDsqueda
 
 NoSearchResultsPage = Ning\uFFFDn resultado de b\uFFFDsqueda
 
+MainMenu_ToolsPage = Ir a la vista de las herramientas
+
 #
 # Quality Assurance / Moderator Workspace
 #
