--- a/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
@@ -763,6 +763,8 @@ NoSearchResultListPage = No Search Results
 
 NoSearchResultsPage = No search results
 
+MainMenu_ToolsPage = Go to Tools-Overview
+
 #
 # Quality Assurance / Moderator Workspace
 #
