Resolved [PUBMAN-2229] Change position of the 'hide' button added japanese headlines for the tools-section
Former-commit-id: da1044bc7dd1c03d71e6e94397e3505c08bcbddc

--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1287,7 +1287,7 @@ ViewItemFull_lblnameOfCreator = \u767B\u9332\u8005
 #
 ToolsPage = Tools
 
-Tools_lblTools = Tools
+Tools_lblTools = \u30C4\u30FC\u30EB
 
 Tools_lblCoNE = CoNE
 
@@ -1295,29 +1295,29 @@ Tools_lblREST = REST
 
 Tools_lblUnAPI = unAPI
 
-Tools_lblValidationService = Validation service
+Tools_lblValidationService = \u691C\u8A3C\u30B5\u30FC\u30D3\u30B9
 
 Tools_lblSWORD = SWORD
 
 Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
 
-Tools_lblCoNEHead = Control of Named Entities (CoNE) 
+Tools_lblCoNEHead = \u540D\u524D\u4ED8\u304D\u30A8\u30F3\u30C6\u30A3\u30C6\u30A3\u306E\u5236\u5FA1 (CoNE) 
 
 Tools_lblCoNEText = Search and administrate controlled vocabularies for persons, journals, classifications or languages. 
 
-Tools_lblRESTHead = Search and Export (REST-Interface)
+Tools_lblRESTHead = \u691C\u7D22\u3068\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8 (REST-\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9)
 
 Tools_lblRESTText = Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via our REST-Interface! 
 
-Tools_lblUnAPIHead = Service for data transfer (unAPI-Interface)
+Tools_lblUnAPIHead = \u30C7\u30FC\u30BF\u8EE2\u9001\u306E\u305F\u3081\u306E\u30B5\u30FC\u30D3\u30B9 (unAPI-\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9)
 
 Tools_lblUnAPIText = Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface! 
 
-Tools_lblValidationServiceHead = Validation service
+Tools_lblValidationServiceHead = \u691C\u8A3C\u30B5\u30FC\u30D3\u30B9
 
 Tools_lblValidationServiceText = Check your XML data for formal correctness with our validation service.
 
-Tools_lblSWORDHead = SWORD\u002DInterface
+Tools_lblSWORDHead = SWORD\u002D\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9
 
 Tools_lblSWORDText = Use this push service for automatic depositing from external servers. 
 
