Resolved [PUBMAN-2241] Automatically transfer search queries to REST
Former-commit-id: b85f8056343bf94afb3168542d0fe876ed1e08e1

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1026,6 +1026,8 @@ Search_lblShowHide = einblenden/ausblenden
 
 ShowQuery = Zeige Suchabfrage
 
+SearchResultList_lblRestServiceExamplePage = in REST-Interfache \u00FCbernehmen
+
 #
 # Submission
 #
