--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1026,6 +1026,8 @@ Search_lblShowHide = show/hide
 
 ShowQuery = Show Query
 
+SearchResultList_lblRestServiceExamplePage = transfer to REST-Interface
+
 #
 # Submission
 #
