--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -1010,7 +1010,9 @@ SearchResultList_lblSortedBy = por
 
 Search_lblShowHide = mostrar/ocultar
 
-ShowQuery = Mostrar consulta de b\u00FAsqueda 
+ShowQuery = Mostrar consulta de b\u00FAsqueda
+
+SearchResultList_lblRestServiceExamplePage = carry over to REST-Interface 
 
 #
 # Submission
