--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1003,6 +1003,8 @@ Search_lblShowHide = \u8868\u793A\u30FB\u7701\u7565
 
 ShowQuery = \u691C\u7D22\u6761\u4EF6\u3092\u8868\u793A\u3059\u308B
 
+SearchResultList_lblRestServiceExamplePage = carry over to REST-Interface
+
 #
 # Submission
 #
