Resolved [PUBMAN-2231] Display the system details of an item (including owner) within the edit mode
Former-commit-id: a9386fbf23948bd73f5cc1c6fcf62ee539c696e1

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -645,6 +645,12 @@ EditItem_lblCollection = Collection
 
 EditItem_lblCollectionOfItem = Dieser Datensatz ist Teil der
 
+EditItem_lblItemVersionID = ID des Datensatzes: 
+
+EditItem_lblItemDepositor = Dieser Datensatz wurde eingestellt von
+
+EditItem_lblItemLastModifier = Dieser Datensatz wurde zuletzt ge\u00E4ndert von
+
 EditItem_lblContent = Inhalt
 
 EditItem_lblContentRelation = Relation
