--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -645,6 +645,12 @@ EditItem_lblCollection = Collection
 
 EditItem_lblCollectionOfItem = This item is part of the
 
+EditItem_lblItemVersionID = ID of the item: 
+
+EditItem_lblItemDepositor = This item was created by
+
+EditItem_lblItemLastModifier = This item was last modfied by
+
 EditItem_lblContent = Content
 
 EditItem_lblContentRelation = Relation
@@ -1026,7 +1032,7 @@ Search_lblShowHide = show/hide
 
 ShowQuery = Show Query
 
-SearchResultList_lblRestServiceExamplePage = transfer to REST-Interface
+SearchResultList_lblRestServiceExamplePage = carry over to REST-Interface
 
 #
 # Submission
