--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -636,6 +636,12 @@ EditItem_lblCollection = Colecci\u00F3n
 
 EditItem_lblCollectionOfItem = Este item es parte de
 
+EditItem_lblItemVersionID = ID of the item: 
+
+EditItem_lblItemDepositor = This item was created by
+
+EditItem_lblItemLastModifier = This item was last modfied by
+
 EditItem_lblContent = Contenido
 
 EditItem_lblContentRelation = Relaci\u00F3n
