--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -626,6 +626,12 @@ EditItem_lblCollection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3
 
 EditItem_lblCollectionOfItem = \u767B\u9332\u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u540D: 
 
+EditItem_lblItemVersionID = ID of the item: 
+
+EditItem_lblItemDepositor = This item was created by
+
+EditItem_lblItemLastModifier = This item was last modfied by
+
 EditItem_lblContent = \u5185\u5BB9\u8AAC\u660E
 
 EditItem_lblContentRelation = \u95A2\u9023\u6027(Relation)
