Resolved [PUBMAN-2244] Limit OU list in the filter of the QA Workspace to "own" OUs added creationDate to EditItem new Labels, Messages and Tooltips highlighted by "(new)" ToolsPage changed order and target to "_blank"
Former-commit-id: bf7e034b646f0eb276c447bd3ce956212f0e7faa

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -645,11 +645,11 @@ EditItem_lblCollection = Collection
 
 EditItem_lblCollectionOfItem = Dieser Datensatz ist Teil der
 
-EditItem_lblItemVersionID = ID des Datensatzes: 
+EditItem_lblItemVersionID = (new) ID des Datensatzes: 
 
-EditItem_lblItemDepositor = Dieser Datensatz wurde eingestellt von
+EditItem_lblItemDepositor = (new) Dieser Datensatz wurde eingestellt von
 
-EditItem_lblItemLastModifier = Dieser Datensatz wurde zuletzt ge\u00E4ndert von
+EditItem_lblItemLastModifier = (new) Dieser Datensatz wurde zuletzt ge\u00E4ndert von
 
 EditItem_lblContent = Inhalt
 
@@ -1032,7 +1032,7 @@ Search_lblShowHide = einblenden/ausblenden
 
 ShowQuery = Zeige Suchabfrage
 
-SearchResultList_lblRestServiceExamplePage = in REST-Interfache \u00FCbernehmen
+SearchResultList_lblRestServiceExamplePage = (new) in REST-Interface \u00FCbernehmen
 
 #
 # Submission
@@ -1275,41 +1275,41 @@ ViewItemFull_lblSubHeaderFile = Dateien
 #
 # Tools
 #
-ToolsPage = Tools
+ToolsPage = (new) Tools
 
-Tools_lblTools = Tools
+Tools_lblTools = (new) Tools
 
-Tools_lblCoNE = CoNE
+Tools_lblCoNE = (new) CoNE
 
-Tools_lblREST = REST
+Tools_lblREST = (new) REST
 
-Tools_lblUnAPI = unAPI
+Tools_lblUnAPI = (new) unAPI
 
-Tools_lblValidationService = Validierungsservice
+Tools_lblValidationService = (new) Validierungsservice
 
-Tools_lblSWORD = SWORD
+Tools_lblSWORD = (new) SWORD
 
 Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
 
-Tools_lblCoNEHead = Control of Named Entities (CoNE) 
+Tools_lblCoNEHead = (new) Control of Named Entities (CoNE) 
 
-Tools_lblCoNEText = Durchsuchen und verwalten Sie kontrollierte Vokabulare f\u00FCr Personen, Zeitschriften, Klassifikationen oder Sprachen. 
+Tools_lblCoNEText = (new) Durchsuchen und verwalten Sie kontrollierte Vokabulare f\u00FCr Personen, Zeitschriften, Klassifikationen oder Sprachen. 
 
-Tools_lblRESTHead = Suchen und Exportieren (REST-Schnittstelle)
+Tools_lblRESTHead = (new) Suchen und Exportieren (REST-Schnittstelle)
 
-Tools_lblRESTText = M\u00F6chten Sie Ihre PubMan Daten in einem externen System integrieren? Die notwendigen Datenabfragen k\u00F6nnen Sie \u00FCber unsere REST-Schnittstelle vornehmen. 
+Tools_lblRESTText = (new) M\u00F6chten Sie Ihre PubMan Daten in einem externen System integrieren? Die notwendigen Datenabfragen k\u00F6nnen Sie \u00FCber unsere REST-Schnittstelle vornehmen. 
 
-Tools_lblUnAPIHead = Service zur Daten\u00FCbernahme (unAPI-Schnittstelle)
+Tools_lblUnAPIHead = (new) Service zur Daten\u00FCbernahme (unAPI-Schnittstelle)
 
-Tools_lblUnAPIText = M\u00F6chten Sie Publikationsdaten von externen Systemen wie arXiv, BioMed Central, PubMedCentral oder Spires importieren? Nutzen Sie dazu unsere unAPI-Schnittstelle!
+Tools_lblUnAPIText = (new) M\u00F6chten Sie Publikationsdaten von externen Systemen wie arXiv, BioMed Central, PubMedCentral oder Spires importieren? Nutzen Sie dazu unsere unAPI-Schnittstelle!
 
-Tools_lblValidationServiceHead = Validierungsservice
+Tools_lblValidationServiceHead = (new) Validierungsservice
 
-Tools_lblValidationServiceText = Pr\u00FCfen Sie Ihre XML-Daten auf formale Richtigkeit!  
+Tools_lblValidationServiceText = (new) Pr\u00FCfen Sie Ihre XML-Daten auf formale Richtigkeit!  
 
-Tools_lblSWORDHead = SWORD\u002DSchnittstelle
+Tools_lblSWORDHead = (new) SWORD\u002DSchnittstelle
 
-Tools_lblSWORDText = Nutzen Sie diesen Push\u002DDienst zum automatisierten Datenimport von externen Servern. 
+Tools_lblSWORDText = (new) Nutzen Sie diesen Push\u002DDienst zum automatisierten Datenimport von externen Servern. 
 
 #
 # ViewItem Full
@@ -2474,7 +2474,7 @@ mainMenu_lblBrowse = Browse
 
 mainMenu_lblCart = ABLAGE
 
-mainMenu_lblTools = Tools
+mainMenu_lblTools = (new) Tools
 
 mainMenu_lblMyWorkspace = Deposit
 
