--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -636,11 +636,11 @@ EditItem_lblCollection = Colecci\u00F3n
 
 EditItem_lblCollectionOfItem = Este item es parte de
 
-EditItem_lblItemVersionID = ID of the item: 
+EditItem_lblItemVersionID = (new) ID of the item: 
 
-EditItem_lblItemDepositor = This item was created by
+EditItem_lblItemDepositor = (new) This item was created by
 
-EditItem_lblItemLastModifier = This item was last modfied by
+EditItem_lblItemLastModifier = (new) This item was last modfied by
 
 EditItem_lblContent = Contenido
 
@@ -1016,9 +1016,9 @@ SearchResultList_lblSortedBy = por
 
 Search_lblShowHide = mostrar/ocultar
 
-ShowQuery = Mostrar consulta de b\u00FAsqueda
+ShowQuery = (new) Mostrar consulta de b\u00FAsqueda
 
-SearchResultList_lblRestServiceExamplePage = carry over to REST-Interface 
+SearchResultList_lblRestServiceExamplePage = (new) carry over to REST-Interface 
 
 #
 # Submission
@@ -1263,41 +1263,41 @@ ViewItemFull_lblSubHeaderFile = Ficheros
 #
 # Tools
 #
-ToolsPage = Tools
+ToolsPage = (new) Tools
 
-Tools_lblTools = Tools
+Tools_lblTools = (new) Tools
 
-Tools_lblCoNE = CoNE
+Tools_lblCoNE = (new) CoNE
 
-Tools_lblREST = REST
+Tools_lblREST = (new) REST
 
-Tools_lblUnAPI = unAPI
+Tools_lblUnAPI = (new) unAPI
 
-Tools_lblValidationService = Validation service
+Tools_lblValidationService = (new) Validation service
 
-Tools_lblSWORD = SWORD
+Tools_lblSWORD = (new) SWORD
 
 Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
 
-Tools_lblCoNEHead = Control of Named Entities (CoNE) 
+Tools_lblCoNEHead = (new) Control of Named Entities (CoNE) 
 
-Tools_lblCoNEText = Search and administrate controlled vocabularies for persons, journals, classifications or languages. 
+Tools_lblCoNEText = (new) Search and administrate controlled vocabularies for persons, journals, classifications or languages. 
 
-Tools_lblRESTHead = Search and Export (REST-Interface)
+Tools_lblRESTHead = (new) Search and Export (REST-Interface)
 
-Tools_lblRESTText = Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via our REST-Interface! 
+Tools_lblRESTText = (new) Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via our REST-Interface! 
 
-Tools_lblUnAPIHead = Service for data transfer (unAPI-Interface)
+Tools_lblUnAPIHead = (new) Service for data transfer (unAPI-Interface)
 
-Tools_lblUnAPIText = Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface! 
+Tools_lblUnAPIText = (new) Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface! 
 
-Tools_lblValidationServiceHead = Validation service
+Tools_lblValidationServiceHead = (new) Validation service
 
-Tools_lblValidationServiceText = Check your XML data for formal correctness with our validation service.
+Tools_lblValidationServiceText = (new) Check your XML data for formal correctness with our validation service.
 
-Tools_lblSWORDHead = SWORD\u002DInterface
+Tools_lblSWORDHead = (new) SWORD\u002DInterface
 
-Tools_lblSWORDText = Use this push service for automatic depositing from external servers. 
+Tools_lblSWORDText = (new) Use this push service for automatic depositing from external servers. 
 
 #
 # ViewItem Full
@@ -2387,7 +2387,7 @@ mainMenu_lblBrowse = Hojear
 
 mainMenu_lblCart = CESTA
 
-mainMenu_lblTools = Instrumentos
+mainMenu_lblTools = (new) Instrumentos
 
 mainMenu_lblMyWorkspace = Depositar
 
