--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -626,11 +626,11 @@ EditItem_lblCollection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3
 
 EditItem_lblCollectionOfItem = \u767B\u9332\u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u540D: 
 
-EditItem_lblItemVersionID = ID of the item: 
+EditItem_lblItemVersionID = (new) ID of the item: 
 
-EditItem_lblItemDepositor = This item was created by
+EditItem_lblItemDepositor = (new) This item was created by
 
-EditItem_lblItemLastModifier = This item was last modfied by
+EditItem_lblItemLastModifier = (new) This item was last modfied by
 
 EditItem_lblContent = \u5185\u5BB9\u8AAC\u660E
 
@@ -1009,7 +1009,7 @@ Search_lblShowHide = \u8868\u793A\u30FB\u7701\u7565
 
 ShowQuery = \u691C\u7D22\u6761\u4EF6\u3092\u8868\u793A\u3059\u308B
 
-SearchResultList_lblRestServiceExamplePage = carry over to REST-Interface
+SearchResultList_lblRestServiceExamplePage = (new) carry over to REST-Interface
 
 #
 # Submission
@@ -1293,41 +1293,41 @@ ViewItemFull_lblnameOfCreator = \u767B\u9332\u8005
 #
 # Tools
 #
-ToolsPage = Tools
+ToolsPage = (new) Tools
 
-Tools_lblTools = \u30C4\u30FC\u30EB
+Tools_lblTools = (new) \u30C4\u30FC\u30EB
 
-Tools_lblCoNE = CoNE
+Tools_lblCoNE = (new) CoNE
 
-Tools_lblREST = REST
+Tools_lblREST = (new) REST
 
-Tools_lblUnAPI = unAPI
+Tools_lblUnAPI = (new) unAPI
 
-Tools_lblValidationService = \u691C\u8A3C\u30B5\u30FC\u30D3\u30B9
+Tools_lblValidationService = (new) \u691C\u8A3C\u30B5\u30FC\u30D3\u30B9
 
-Tools_lblSWORD = SWORD
+Tools_lblSWORD = (new) SWORD
 
 Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
 
-Tools_lblCoNEHead = \u540D\u524D\u4ED8\u304D\u30A8\u30F3\u30C6\u30A3\u30C6\u30A3\u306E\u5236\u5FA1 (CoNE) 
+Tools_lblCoNEHead = (new) \u540D\u524D\u4ED8\u304D\u30A8\u30F3\u30C6\u30A3\u30C6\u30A3\u306E\u5236\u5FA1 (CoNE) 
 
-Tools_lblCoNEText = Search and administrate controlled vocabularies for persons, journals, classifications or languages. 
+Tools_lblCoNEText = (new) Search and administrate controlled vocabularies for persons, journals, classifications or languages. 
 
-Tools_lblRESTHead = \u691C\u7D22\u3068\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8 (REST-\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9)
+Tools_lblRESTHead = (new) \u691C\u7D22\u3068\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8 (REST-\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9)
 
-Tools_lblRESTText = Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via our REST-Interface! 
+Tools_lblRESTText = (new) Do you want to integrate your PubMan Data within an external system? Necessary queries can be carried out via our REST-Interface! 
 
-Tools_lblUnAPIHead = \u30C7\u30FC\u30BF\u8EE2\u9001\u306E\u305F\u3081\u306E\u30B5\u30FC\u30D3\u30B9 (unAPI-\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9)
+Tools_lblUnAPIHead = (new) \u30C7\u30FC\u30BF\u8EE2\u9001\u306E\u305F\u3081\u306E\u30B5\u30FC\u30D3\u30B9 (unAPI-\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9)
 
-Tools_lblUnAPIText = Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface! 
+Tools_lblUnAPIText = (new) Do you want to fetch data from external sources like arXiv, BioMed Central, PubMed Central or Spires? Use our unAPI-interface! 
 
-Tools_lblValidationServiceHead = \u691C\u8A3C\u30B5\u30FC\u30D3\u30B9
+Tools_lblValidationServiceHead = (new) \u691C\u8A3C\u30B5\u30FC\u30D3\u30B9
 
-Tools_lblValidationServiceText = Check your XML data for formal correctness with our validation service.
+Tools_lblValidationServiceText = (new) Check your XML data for formal correctness with our validation service.
 
-Tools_lblSWORDHead = SWORD\u002D\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9
+Tools_lblSWORDHead = (new) SWORD\u002D\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9
 
-Tools_lblSWORDText = Use this push service for automatic depositing from external servers. 
+Tools_lblSWORDText = (new) Use this push service for automatic depositing from external servers. 
 
 #
 #ViewItemLog
@@ -2438,7 +2438,7 @@ mainMenu_lblBrowse = \u30D6\u30E9\u30A6\u30BA
 
 mainMenu_lblCart = \u4E00\u6642\u4FDD\u5B58
 
-mainMenu_lblTools = \u30C4\u30FC\u30EB
+mainMenu_lblTools = (new) \u30C4\u30FC\u30EB
 
 mainMenu_lblMyWorkspace = \u767B\u9332\u8005\u7528
 
