--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -315,7 +315,7 @@ copyright = \u00A9 2007 Max Planck Gesellschaft
 #
 create_Item_Select_Collection = Bitte w\u00E4hlen Sie die Collection aus, in der Sie Ihren Datensatz erstellen m\u00F6chten.
 
-deleteItemsFromBasket_NoItemSelected = Bitte w\u00E4hlen Sie mindestens einen Datensatz zum entfernen aus.
+deleteItemsFromBasket_NoItemSelected = (new) Bitte w\u00E4hlen Sie mindestens einen Datensatz zum entfernen aus.
 
 #
 # Delete Message
@@ -584,7 +584,7 @@ import_process_transformation_done = Die Transformation ist abgeschlossen
 
 import_process_validate = Validierung des Datensatzes
 
-itemHasBeenChangedInTheMeantime = Ein unerwarteter Fehler ist aufgetreten. Bitte wenden Sie sich an den PubMan Support.
+itemHasBeenChangedInTheMeantime = (new) Ein unerwarteter Fehler ist aufgetreten. Bitte wenden Sie sich an den PubMan Support.
 
 # EditItem
 itemHasNotBeenChanged = Der Datensatz wurde nicht ge\u00E4ndert und somit auch nicht erneut abgespeichert.
@@ -661,9 +661,9 @@ search_TechnicalError = Technischer Fehler bei der Bearbeitung der Suche aufgetr
 #
 # Tools
 #
-toolsOverview = Hier finden Sie eine \u00DCbersicht der zur Verf\u00FCgung stehenden Tools. 
+toolsOverview = (new) Hier finden Sie eine \u00DCbersicht der zur Verf\u00FCgung stehenden Tools. 
 
-toolsMoreInformation = Weitere Informationen finden Sie unter:
+toolsMoreInformation =  (new) Weitere Informationen finden Sie unter:
 
 #
 # Common
