--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -321,7 +321,7 @@ copyright = \u00A9 2007 Max Planck Society
 #
 create_Item_Select_Collection = Please choose a collection for your item.
 
-deleteItemsFromBasket_NoItemSelected = Please select at least one Item to remove.
+deleteItemsFromBasket_NoItemSelected = (new) Please select at least one Item to remove.
 
 #
 # Delete Message
@@ -593,7 +593,7 @@ import_process_transformation_done = Transformation done
 
 import_process_validate = Validating item
 
-itemHasBeenChangedInTheMeantime = An unexpected error occurred. Please contact PubMan Support.
+itemHasBeenChangedInTheMeantime = (new) An unexpected error occurred. Please contact PubMan Support.
 
 # EditItem
 itemHasNotBeenChanged = The Item was not changed and therefore not saved once again.
@@ -670,9 +670,9 @@ search_TechnicalError = Technical error while processing the search query
 #
 # Tools
 #
-toolsOverview = Here is an overview of available tools.
+toolsOverview = (new) Here is an overview of available tools.
 
-toolsMoreInformation = Further information on the interfaces can be found under:
+toolsMoreInformation = (new) Further information on the interfaces can be found under:
 
 #
 # Common
