--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -622,9 +622,9 @@ search_TechnicalError = Se ha producido un error t\u00E9cnico mientras se proces
 #
 # Tools
 #
-toolsOverview = Here is an overview of available tools.
+toolsOverview = (new) Here is an overview of available tools.
 
-toolsMoreInformation = Further information on the interfaces can be found under:
+toolsMoreInformation = (new) Further information on the interfaces can be found under:
 
 #
 # Common
