--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -666,9 +666,9 @@ search_TechnicalError = Technical error while processing the search query
 #
 # Tools
 #
-toolsOverview = Here is an overview of available tools.
+toolsOverview = (new) Here is an overview of available tools.
 
-toolsMoreInformation = Further information on the interfaces can be found under:
+toolsMoreInformation = (new) Further information on the interfaces can be found under:
 
 #
 # Common
