--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -752,7 +752,7 @@ Login_login_logout = Login/Logout
 
 MainMenu_ImportWorkspacesPage = Gehe zu Import Seite.
 
-MainMenu_WorkspacesPage = Gehe zur \u00DCbersicht der Arbeitsbereiche
+MainMenu_WorkspacesPage = (new) Gehe zur \u00DCbersicht der Arbeitsbereiche
 
 MainMenu_cartItemsPage = Gehe zur Ablage.
 
@@ -765,7 +765,7 @@ NoSearchResultListPage = keine Suchergebnisse
 
 NoSearchResultsPage = Keine Treffer
 
-MainMenu_ToolsPage = Gehe zur Tools\u002D\u00DCbersicht
+MainMenu_ToolsPage = (new) Gehe zur Tools\u002D\u00DCbersicht
 
 #
 # Quality Assurance / Moderator Workspace
