--- a/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
@@ -752,7 +752,7 @@ Login_changeLanguage = Change Language
 # Login
 Login_login_logout = Login/Logout
 
-MainMenu_WorkspacesPage = Go to Workspaces Overview
+MainMenu_WorkspacesPage = (new) Go to Workspaces Overview
 
 MainMenu_cartItemsPage = Go to Basket page.
 
@@ -765,7 +765,7 @@ NoSearchResultListPage = No Search Results
 
 NoSearchResultsPage = No search results
 
-MainMenu_ToolsPage = Go to Tools-Overview
+MainMenu_ToolsPage = (new) Go to Tools-Overview
 
 #
 # Quality Assurance / Moderator Workspace
