--- a/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
@@ -750,7 +750,7 @@ Login_changeLanguage = Change Language
 # Login
 Login_login_logout = Login /Logout
 
-MainMenu_WorkspacesPage = Go to Workspaces Overview
+MainMenu_WorkspacesPage = (new) Go to Workspaces Overview
 
 MainMenu_cartItemsPage = \u4E00\u6642\u4FDD\u5B58\u306E\u767B\u9332\u5185\u5BB9\u3092\u898B\u308B
 
@@ -763,7 +763,7 @@ NoSearchResultListPage = No Search Results
 
 NoSearchResultsPage = No search results
 
-MainMenu_ToolsPage = Go to Tools-Overview
+MainMenu_ToolsPage = (new) Go to Tools-Overview
 
 #
 # Quality Assurance / Moderator Workspace
