Resolved [PUBMAN-2056] the option in select button (japanese) Bugfix for [PUBMAN-2140]v Closed Contexts are Shown in Submission
Former-commit-id: a43e1be0ee42613c49ed32f20fb96f3f9ae3ff87

--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -941,6 +941,8 @@ List_lkPrevious = Anterior
 
 List_lkShow = Mostrar
 
+List_lkToggleAll = Toggle all
+
 LocalTagsPage = Editar Etiquetas
 
 LoginErrorPage = Estado de Login 
