--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -358,6 +358,8 @@ depositorWS_valNoItemsMsg = Sie haben keine Datens\u00E4tze im gew\u00E4hlten St
 
 depositorWS_wrongItemState = Ein oder mehrere Datens\u00E4tze m\u00FCssen zum Ausf\u00FChren der gew\u00E4hlen Aktion korrigiert werden.
 
+depositorWE_noOpenContextsAvailable = (new) Es ist kein ge\u00F6ffneter Context verf\u00FCgbar.
+
 easy_submission_ExternalLocators = Zus\u00E4tzlich k\u00F6nnen Sie hier die URL zu extern abgelegtem Supplementary Material angeben.
 
 #
