--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -364,6 +364,8 @@ depositorWS_valNoItemsMsg = You have no items in the selected state.
 
 depositorWS_wrongItemState = One or more items are in the wrong state for this action.
 
+depositorWE_noOpenContextsAvailable = (new) No open context available.
+
 easy_submission_ExternalLocators = In addition you can reference externally located supplementary material by providing the URL below.
 
 #
