--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -324,6 +324,8 @@ depositorWS_valNoItemsMsg = No tiene item en el estado seleccionado.
 
 depositorWS_wrongItemState = Uno o m\u00E1s items no est\u00E1n en el estado  correcto para esta acci\u00F3n.
 
+depositorWE_noOpenContextsAvailable = (new) No open context available.
+
 easy_submission_ExternalLocators = Adem\u00E1s puede referenciar material complementario localizado externamente proporcionando la URL a continuaci\u00F3n.
 
 #
