--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -358,6 +358,8 @@ depositorWS_valNoItemsMsg = \u6307\u5B9A\u3055\u308C\u305F\u767B\u9332\u72B6\u6C
 
 depositorWS_wrongItemState = One or more items are in the wrong state for this action.
 
+depositorWE_noOpenContextsAvailable = (new) No open context available.
+
 easy_submission_ExternalLocators = \u5916\u90E8\u30B5\u30FC\u30D0\u306B\u3042\u308B\u8FFD\u52A0\u306E\u4ED8\u968F\u8CC7\u6599\u306EURL\u3092\u4EE5\u4E0B\u3067\u6307\u5B9A\u3059\u308B\u3053\u3068\u3067\u53C2\u7167\u30EA\u30F3\u30AF\u3092\u5F35\u308B\u3053\u3068\u3082\u3067\u304D\u307E\u3059\u3002
 
 #
